# baldwin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  unixBuild.sh
shaders/: common_structs.glsl  diffuse.frag.glsl  diffuse.vert.glsl  vertex_color.frag.glsl  vertex_color.vert.glsl
src/: engine.cpp  engine.hpp
src/loader/: gltf.cpp  gltf.hpp
src/renderer/: render_types.hpp  renderer.hpp  shaders.cpp  shaders.hpp
src/renderer/vulkan/: vulkan_descriptors.cpp  vulkan_descriptors.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_images.cpp  vulkan_images.hpp  vulkan_infos.cpp  vulkan_infos.hpp  vulkan_pipelines.cpp  vulkan_pipelines.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_swapchain.hpp  vulkan_swaphchain.cpp  vulkan_types.hpp  vulkan_utils.hpp
src/scene/: mesh.hpp
src/utils/: uuid.hpp
